Completed the Intro_to_Python draft

--- a/Intro_to_Python.ipynb
+++ b/Intro_to_Python.ipynb
@@ -1676,9 +1676,25 @@
       "\n",
       "\n",
       "Congratulations! You've learned about and practiced math, strings, variables, data types, exceptions, tracebacks, and executing Python from the Python prompt.\n",
-      "Take a break, stretch, meet some neighbors, and ask the staff if you have any questions about this material.\n",
+      "Take a break, stretch, meet some neighbors, and ask the demonstrators if you have any questions about this material.\n",
       "\n",
       "\n"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Part 2"
      ]
     },
     {
@@ -2444,26 +2460,6 @@
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "End of Part 2"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Congratulations! You've learned about and practiced executing Python scripts, booleans, conditionals, and if/else blocks, and you've written your own Python functions. This is a huge, huge accomplishment!\n",
-      "\n",
-      "Take a break, stretch, meet some neighbours, and ask the staff if you have any questions about this material.\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -2800,8 +2796,7 @@
      "metadata": {},
      "source": [
       "Hand in hand with lists of objects is a way to perform actions on each of the members of the list in turn. These are called loops.\n",
-      "\n",
-      "If we define a list of numbers:\n",
+      "Suppose we have a list of numbers:\n",
       "    \n",
       "    myNewList = [0,1,2,3,4,5]"
      ]
@@ -2818,7 +2813,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "And we wanted wish to print out element in turn we could write out:\n",
+      "And we want to print out the elements of the list line by line. We could do that with:\n",
       "    \n",
       "    print(myNewList[0])\n",
       "    print(myNewList[1])\n",
@@ -2839,7 +2834,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "But that's a lot of work and it will only get worse if our list grows. Loops offer a smarter way of doing this. Try executing the following:\n",
+      "But that's a lot of work, loops offer a more concise way of doing this. Try executing the following:\n",
       "\n",
       "    for item in myNewList:\n",
       "        print(item)"
@@ -2854,14 +2849,119 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As you can see it produces identical results to the more verbose version we tried initially.\n",
+      "\n",
+      "Loops work by assigning a temporary name (in this case *item*) to the first element of the list, executing some code (which is indented under the first line), then setting the temporary name to the second element re-executing the code, then setting the temporary name to the third element, re-executing the code, etc. etc."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "It doesn't make a difference what temporary name we choose but we should try and pick something that makes sense to us. The following produces the same output but would be very confusing to someone trying to read out code:\n",
+      "\n",
+      "    for myNewString in myNewList:\n",
+      "        print(myNewString)"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "As you can see it produces identical results to the much more verbose version we tried initially."
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Just as with if statements loops are not limited to a single line:\n",
+      "    \n",
+      "    for i in myNewList:\n",
+      "        tempVar1 = i+2\n",
+      "        tempVar2 = tempVar1 * 10\n",
+      "        print(tempVar2)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Lists of integers are so useful python has a built in function *range* that creates them.\n",
+      "\n",
+      "    range(9)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The simplest way to use range is to pass it an integer N, if you do so it returns a list of integers starting at 0 and containing all integers up to N-1. You can optionally specify a starting integer if you want to the list to start later than 0.\n",
+      "    \n",
+      "    range(2,9)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "And finally you can specify an interval:\n",
+      "   \n",
+      "    range(2,9,2)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "*These inbuilt python functions might seem like voodoo but there are only a handfull of them and they are listed in the [official documentation](http://docs.python.org/2/library/functions.html)*\n",
+      "    "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "End of Part 2"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Congratulations! You've learned about and practiced executing Python scripts, booleans, conditionals, and if/else blocks, you've written your own Python functions and you've learned how to use lists and loops! This is a huge, huge accomplishment!\n",
+      "\n",
+      "Take a break, stretch, meet some neighbours, and ask the demonstrators if you have any questions about this material."
+     ]
     }
    ],
    "metadata": {}
