Improvements to first workshop file.
Removed image of shapes reference including refernce to missing png file.
math -> maths
Put in a warning about saving your work. Cylde: is this needed in the version they are using ?
staff -> demonstartor
removed camel case variables/functions
Removed a print from the string concatenation example. There is a section explaining print directly
after I though this was a little confussing.
Added spaces between items in functions i.e. my_func(a,b,c) -> my_func(a, b, c) this to me makes
code much clearer.
Print keyword -> Print function once.

TODO:
Traceback has wrong version of python. Clyde: Can we add in the correct one for the version they
are going to use?

--- a/Day1/Intro_to_Python.ipynb
+++ b/Day1/Intro_to_Python.ipynb
@@ -28,7 +28,9 @@
       "that's followed by an empty *code cell* (a light grey rectagle with a label like *\"In[ ]\"*), you should \n",
       "type the expression in the code cell, hit Shift+Return to *execute* it, and note the output.\n",
       "\n",
-      "No copying and pasting! You'll learn the concepts better if you type them out yourself."
+      "No copying and pasting! You'll learn the concepts better if you type them out yourself.\n",
+      "\n",
+      "Warning please periodically save your work. This notebook has no autosave function.\n"
      ]
     },
     {
@@ -45,7 +47,7 @@
      "source": [
       "![Calculator](files/images/100px-Calculator.png)\n",
       "\n",
-      "Maths in Python looks a lot like math you type into a calculator. A Python prompt makes a great calculator if you need to crunch some numbers and don't have a good calculator handy."
+      "Maths in Python looks a lot like maths you type into a calculator. A Python prompt makes a great calculator if you need to crunch some numbers and don't have a good calculator handy."
      ]
     },
     {
@@ -328,8 +330,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "![Image of shapes](files/images/150px-Geometry.png)\n",
-      "\n",
       "There's a helpful function (more on what a function is in a second) called type that tells you what kind of thing -- what data type -- Python thinks something is. We can check for ourselves that Python considers '1' and '1.0' to be different data types:\n",
       "\n",
       "    type(1)"
@@ -391,7 +391,7 @@
       "I used the term 'function' without explaining what it is -- we'll talk about functions more in a bit, and write our own, but for now know these things:\n",
       "\n",
       "- Functions encapsulate some useful bit of work. We save that useful bit of work inside the function so we don't have to type it over and over again every time we want to use it. So, for example, some nice person decided that being able to determine the type of an object was useful, so he or she put the Python code that figures out an object's type into the function type, and now we all get to use it, instead of having to write it ourselves.\n",
-      "- Functions are sort of like functions in math class. You provide input to a function and it produces output. The type function takes data as an input, and produces what type of data the data is (e.g. an integer or a float) as output.\n",
+      "- Functions are sort of like functions in maths class. You provide input to a function and it produces output. The type function takes data as an input, and produces what type of data the data is (e.g. an integer or a float) as output.\n",
       "\n",
       "To use a function, write the name of the function followed by an open parenthesis, what the function takes as input (we call that input the arguments to the function), and then a close parenthesis.\n",
       "\n",
@@ -410,7 +410,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A lot of work gets done in Python using variables. Variables are a lot like the variables in math class, except that in Python variables can be of any data type, not just numbers.\n",
+      "A lot of work gets done in Python using variables. Variables are a lot like the variables in maths class, except that in Python variables can be of any data type, not just numbers.\n",
       "\n",
       "    type(4)"
      ]
@@ -959,7 +959,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Like with the math data types above, we can use the type function to check the type of strings:\n",
+      "Like with the maths data types above, we can use the type function to check the type of strings:\n",
       "\n",
       "    type(\"Hello\")\n"
      ]
@@ -1030,7 +1030,7 @@
       "\n",
       "    \"Hello\" + \"World\"\n",
       "    name = \"Mike\"\n",
-      "    print(\"Hello \" + name)"
+      "    "
      ]
     },
     {
@@ -1576,7 +1576,7 @@
       "a = \"quick\"\n",
       "b = \"brown\"\n",
       "c = \"fox jumps over the lazy dog\"\n",
-      "print \"The \" +  a * 3 + \" \" +  b * 3 + \" \" + c"
+      "print(\"The \" +  a * 3 + \" \" +  b * 3 + \" \" + c)"
      ],
      "language": "python",
      "metadata": {},
@@ -1675,7 +1675,7 @@
       "=============\n",
       "\n",
       "\n",
-      "Congratulations! You've learned about and practiced math, strings, variables, data types, exceptions, tracebacks, and executing Python from the Python prompt.\n",
+      "Congratulations! You've learned about and practiced maths, strings, variables, data types, exceptions, tracebacks, and executing Python from the Python prompt.\n",
       "Take a break, stretch, meet some neighbors, and ask the demonstrators if you have any questions about this material.\n",
       "\n",
       "\n"
@@ -1806,7 +1806,7 @@
      "source": [
       "Use == to test for equality. Recall that = is used for assignment.\n",
       "This is an important idea and can be a source of bugs until you get used to it: = is assignment, == is comparison.\n",
-      "Use != to test for inequality:\n",
+      "Use != to test for inequality (not equals):\n",
       "    \"a\" != \"a\"\n"
      ]
     },
@@ -1837,7 +1837,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<, <=, >, and >= have the same meaning as in math class. The result of these tests is a boolean:\n",
+      "<, <=, >, and >= have the same meaning as in maths class. The result of these tests is a boolean:\n",
       "    1 > 0\n"
      ]
     },
@@ -1979,7 +1979,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "That was our first multi-line piece of code, and we need to pay attention to the indentation on the second line.\n",
+      "That was our first multi-line piece of code, and we need to pay attention to the indentation on the second line (the notebook trys to take care of this for you).\n",
       "Make sure to hit space four times before typing the second line; Python needs them to understand what we want it\n",
       "to do.  \n",
       "\n",
@@ -2129,7 +2129,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Guess what will happen when you enter these next two examples, and then type them out and see if you are correct. If you have trouble with the indenting, call over a staff member and practice together. It is important to be comfortable with indenting for tomorrow.\n",
+      "Guess what will happen when you enter these next two examples, and then type them out and see if you are correct. If you have trouble with the indenting, call over a demonstrator and practice together. It is important to be comfortable with indenting for tomorrow.\n",
       "\n",
       "    temperature = 32\n",
       "    if temperature > 60 and temperature < 75:\n",
@@ -2306,15 +2306,15 @@
      "source": [
       "A function *signature* tells you how the function will be called. It starts with the keyword `def`, which tells Python that you are *defining* a function. Then comes a space, the name of your function, an open parenthesis, the comma-separated input parameters for your function, a close parenthesis, and a colon. Here's what a function signature looks like for a function that takes no arguments:\n",
       "\n",
-      "    def myFunction():\n",
+      "    def my_function():\n",
       "\n",
       "Here's what a function signature looks like for a function that takes one argument called string:\n",
       "\n",
-      "    def myFunction(myString):\n",
+      "    def my_function(my_string):\n",
       "\n",
       "And one for a function that takes two arguments:\n",
       "\n",
-      "    def myFunction(myList, myInteger):\n",
+      "    def my_function(my_list, my_integer):\n",
       "\n",
       "Parameters should have names that usefully describe what they are used for in the function.\n",
       "\n",
@@ -2368,7 +2368,7 @@
       "\n",
       "Once you execute a return, you are done with the function -- you don't get to do any more work. That means if you have a function like this:\n",
       "\n",
-      "    def absoluteValue(number):\n",
+      "    def absolute_value(number):\n",
       "        if number < 0:\n",
       "            return number * -1\n",
       "        return number\n",
@@ -2377,7 +2377,7 @@
       "\n",
       "We could have written the above function like this if we wanted. It's the same logic, just more typing:\n",
       "\n",
-      "    def absoluteValue(number):\n",
+      "    def absolute_value(number):\n",
       "        if number < 0:\n",
       "            return number * -1\n",
       "        else:\n",
@@ -2466,7 +2466,7 @@
       "## Lists\n",
       "Very often in a programming language, we want to keep a group of similar items together. Python does this using a data type called a **list**.\n",
       "\n",
-      "    daysOfTheWeek = [\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\"]"
+      "    days_of_the_week = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\"]"
      ]
     },
     {
@@ -2482,7 +2482,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    type(daysOfTheWeek)"
+      "    type(days_of_the_week)"
      ]
     },
     {
@@ -2499,7 +2499,7 @@
      "source": [
       "You can access the members of a list using the **index** of that item:\n",
       "\n",
-      "    daysOfTheWeek[2]"
+      "    days_of_the_week[2]"
      ]
     },
     {
@@ -2527,7 +2527,7 @@
       "\n",
       "If you want to count back from the last element of a list you use a negative index. An index of -1 corresponds to the last element of the list, whilst an index of -2 corresponds to the second to last element, -3 the third last, etc. etc..\n",
       "\n",
-      "    daysOfTheWeek[-1]"
+      "    days_of_the_week[-1]"
      ]
     },
     {
@@ -2553,7 +2553,7 @@
      "source": [
       "If you try and provide an index that goes beyond the last element of a list Python will throw an IndexError.\n",
       "\n",
-      "    daysOfTheWeek[8]"
+      "    days_of_the_week[8]"
      ]
     },
     {
@@ -2570,7 +2570,7 @@
      "source": [
       "The same is true if you count backwards and go beyond the first element of a list:\n",
       "    \n",
-      "    daysOfTheWeek[-8]"
+      "    days_of_the_week[-8]"
      ]
     },
     {
@@ -2588,7 +2588,7 @@
      "source": [
       "Lists are very general and do not have to hold the same data type. For example:\n",
       "\n",
-      "    [\"Today\",7,99.3,\"\"]"
+      "    [\"Today\", 7,99.3, \"\"]"
      ]
     },
     {
@@ -2614,7 +2614,7 @@
      "source": [
       "They can even contain other lists:\n",
       "    \n",
-      "    outerList = [ [1,2,3], [4,5,6], [7,8,9] ]"
+      "    outer_list = [ [1, 2, 3], [4, 5, 6], [7, 8, 9] ]"
      ]
     },
     {
@@ -2632,7 +2632,7 @@
      "source": [
       "Just as we can access the members of a list with an index:\n",
       "\n",
-      "    outerList[3]"
+      "    outer_list[3]"
      ]
     },
     {
@@ -2656,7 +2656,7 @@
      "source": [
       "So too we can access the members of an inner list by an extra index\n",
       "\n",
-      "    outerList[3][0]"
+      "    outer_list[3][0]"
      ]
     },
     {
@@ -2673,9 +2673,9 @@
      "source": [
       "If the above looks a bit confusing here's an alternative way of getting the same answer that shows what's happening when this double index is being used:\n",
       "\n",
-      "    innerList = outerList[3]\n",
-      "    innerElement = innerList[0]\n",
-      "    print(innerElement)"
+      "    inner_list = outer_list[3]\n",
+      "    inner_element = inner_list[0]\n",
+      "    print(inner_element)"
      ]
     },
     {
@@ -2692,7 +2692,7 @@
      "source": [
       "Like strings we can concatenate lists together\n",
       "\n",
-      "    [1,2,3] + [4,5,6]"
+      "    [1, 2, 3] + [4, 5, 6]"
      ]
     },
     {
@@ -2709,10 +2709,10 @@
      "source": [
       "As expected the combination is another list:\n",
       "    \n",
-      "    firstList = [1,2,3]\n",
-      "    secondList = [4,5,6]\n",
-      "    concatList = a + b\n",
-      "    type(concatList)"
+      "    first_list = [1, 2, 3]\n",
+      "    second_list = [4, 5, 6]\n",
+      "    concat_list = a + b\n",
+      "    type(concat_list)"
      ]
     },
     {
@@ -2746,7 +2746,7 @@
      "source": [
       "Above we used the '+' operator to add more elements to a list, there is alternative to this - the special 'append' method, this is a special function that adds a new element to the list. You use like this:\n",
       "\n",
-      "    languages = [\"Fortran\",\"C\",\"C++\"]\n",
+      "    languages = [\"Fortran\", \"C\", \"C++\"]\n",
       "    languages.append(\"Python\")\n",
       "    print(languages)"
      ]
@@ -2798,7 +2798,7 @@
       "Hand in hand with lists of objects is a way to perform actions on each of the members of the list in turn. These are called loops.\n",
       "Suppose we have a list of numbers:\n",
       "    \n",
-      "    myNewList = [0,1,2,3,4,5]"
+      "    my_new_list = [0, 1, 2, 3, 4, 5]"
      ]
     },
     {
@@ -2815,11 +2815,11 @@
      "source": [
       "And we want to print out the elements of the list line by line. We could do that with:\n",
       "    \n",
-      "    print(myNewList[0])\n",
-      "    print(myNewList[1])\n",
-      "    print(myNewList[2])\n",
-      "    print(myNewList[3])\n",
-      "    print(myNewList[4])"
+      "    print(my_new_list[0])\n",
+      "    print(my_new_list[1])\n",
+      "    print(my_new_list[2])\n",
+      "    print(my_new_list[3])\n",
+      "    print(my_new_list[4])"
      ]
     },
     {
@@ -2836,7 +2836,7 @@
      "source": [
       "But that's a lot of work, loops offer a more concise way of doing this. Try executing the following:\n",
       "\n",
-      "    for item in myNewList:\n",
+      "    for item in my_new_list:\n",
       "        print(item)"
      ]
     },
@@ -2863,8 +2863,8 @@
      "source": [
       "It doesn't make a difference what temporary name we choose but we should try and pick something that makes sense to us. The following produces the same output but would be very confusing to someone trying to read out code:\n",
       "\n",
-      "    for myNewString in myNewList:\n",
-      "        print(myNewString)"
+      "    for my_new_string in my_new_list:\n",
+      "        print(my_new_string)"
      ]
     },
     {
@@ -2881,10 +2881,10 @@
      "source": [
       "Just as with if statements loops are not limited to a single line:\n",
       "    \n",
-      "    for i in myNewList:\n",
-      "        tempVar1 = i+2\n",
-      "        tempVar2 = tempVar1 * 10\n",
-      "        print(tempVar2)"
+      "    for i in my_new_list:\n",
+      "        temp_var1 = i+2\n",
+      "        temp_var2 = temp_var1 * 10\n",
+      "        print(temp_var2)"
      ]
     },
     {
@@ -2918,7 +2918,7 @@
      "source": [
       "The simplest way to use range is to pass it an integer N, if you do so it returns a list of integers starting at 0 and containing all integers up to N-1. You can optionally specify a starting integer if you want to the list to start later than 0.\n",
       "    \n",
-      "    range(2,9)"
+      "    range(2, 9)"
      ]
     },
     {
@@ -2935,7 +2935,7 @@
      "source": [
       "And finally you can specify an interval:\n",
       "   \n",
-      "    range(2,9,2)"
+      "    range(2, 9, 2)"
      ]
     },
     {
