--- a/Day1/Intro_to_Python_exercises.ipynb
+++ b/Day1/Intro_to_Python_exercises.ipynb
@@ -12,7 +12,86 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Basic operations"
+      "Workshop 1 exercises"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In these exercises you will write functions that perform a particular task. People often document their code by including strings inside functions that describe what the function does and what the arguments are. This string is included directly below the function signature, it has no effect on the processing the function performs.\n",
+      "\n",
+      "For the exercises we are using this string to specify how we want the function to behave. It shows examples of the function being used along with what output we expect to be produced. \n",
+      "\n",
+      "That sounds more complicated that it is so here's an example to get the idea."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def identity(var):\n",
+      "    '''\n",
+      "    >>> identity('a')\n",
+      "    'a'\n",
+      "    >>>identity(123)\n",
+      "    123\n",
+      "    >>>identity([1,2,3])\n",
+      "    [1,2,3]\n",
+      "    '''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Your job would be to add content to the identity function (below the string) such that calling this function with 'a' as an argument would mean the function returns 'a', likewise calling the function with 123 as an argument would return 123. \n",
+      "\n",
+      "The solution is to return the variable we are passing in:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from nose import test\n",
+      "@test\n",
+      "def identity(var):\n",
+      "    '''\n",
+      "    >>> identity('a')\n",
+      "    'a'\n",
+      "    >>>identity(123)\n",
+      "    123\n",
+      "    >>>identity([1,2,3])\n",
+      "    [1,2,3]\n",
+      "    '''\n",
+      "    return var"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "ImportError",
+       "evalue": "cannot import name test",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-3-7d1655fcb3a7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mnose\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m@\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0midentity\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     '''\n\u001b[0;32m      5\u001b[0m     \u001b[1;33m>>\u001b[0m\u001b[1;33m>\u001b[0m \u001b[0midentity\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mImportError\u001b[0m: cannot import name test"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Part 1 exercises"
      ]
     },
     {
@@ -150,7 +229,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Tougher exercises!\n",
+      "Extra exercises!\n",
       "==============================\n",
       "\n",
       "Try these if you have time!"
@@ -288,7 +367,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "More exercises\n",
+      "Part 2 exercises\n",
       "============================ "
      ]
     },
@@ -416,6 +495,16 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 35
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Extra exercises!\n",
+      "================\n",
+      "\n",
+      "Try these if you have time!"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -682,7 +771,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "*That's all!*  If you've made it this far, you're amazing!  (Even if you finished up after the workshop.)  Hope you get involved with your local Python user group to find out more of the great stuff you can do!"
+      "*That's all!*  If you've made it this far, you're doing brilliantly!  (Even if you finished up after the workshop.)  "
      ]
     }
    ],
