Boxes to pics in presentation + nice pic of hpc.

--- a/talk/present.tex
+++ b/talk/present.tex
@@ -62,9 +62,11 @@
 \end{itemize}
 
 
+\begin{exampleblock}{}
 \begin{figure}
-\includegraphics[width=0.5\textwidth]{sinx.pdf}
+\includegraphics[width=0.5\textwidth]{supercomputer.pdf}
 \end{figure}
+\end{exampleblock}
 
 
 }
@@ -150,9 +152,11 @@
 \item Many open source scientific and other libraries available.
 \item e.g. Matplotlib for plotting
 \end{itemize}
+\begin{exampleblock}{}
 \begin{figure}
 \includegraphics[width=0.5\textwidth]{sinx.pdf}
 \end{figure}
+\end{exampleblock}
 }
 
 
@@ -179,8 +183,11 @@
 \item Put python code into .py file using a text editor.
 \item Run on the command line: python test.py 
 \end{itemize}
+
+\begin{exampleblock}{}
 \includegraphics[width=0.5\textwidth]{term.pdf}
 \includegraphics[width=0.5\textwidth]{file.pdf}
+\end{exampleblock}
 \begin{itemize}
 \item Useful for scripts and finished programs.
 \end{itemize}
@@ -189,10 +196,13 @@
 	\frametitle{Using the IPython Interactive environment}
 
 \begin{itemize}
-\item To launch from the command line: IPython
+\item To launch from the command line: ipython
 \item Interactive session consists of a number of cells which are ran consecutively.
 \end{itemize}
+\begin{exampleblock}{}
+\centering
 \includegraphics[width=0.5\textwidth]{ipython.pdf}
+\end{exampleblock}
 
 \begin{itemize}
 \item Useful for quickly testing out simple ideas which can be put into a .py file later.
@@ -207,7 +217,10 @@
 \item Interactive session consists of a number of cells which can be run in any order.
 \item Can insert plain text and latex notes, links to web pages, images and videos.
 \end{itemize}
+\begin{exampleblock}{}
+\centering
 \includegraphics[width=0.5\textwidth]{ipython-notebook.pdf}
+\end{exampleblock}
 }
 \frame{
 	\frametitle{Using the IPython Interactive Notebook}
