--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -1166,7 +1166,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "You can pass in a second argument to **array** that gives the numeric type. There are a number of types [listed here](http://docs.scipy.org/doc/numpy/user/basics.types.html) that your matrix can be. Some of these are aliased to single character codes. The most common ones are 'd' (double precision floating point number), 'D' (double precision complex number), and 'i' (int32). Thus,\n",
+      "You can pass in a second argument to **array** that gives the numeric type. There are a number of types [listed here](http://docs.scipy.org/doc/numpy/user/basics.types.html) that your matrix can be. Some of these are referenced using a single character. The most common ones are 'd' (double precision floating point number), 'D' (double precision complex number), and 'i' (int32). Thus,\n",
       "\n",
       "    np.array([1,2,3,4,5,6],'d')"
      ]
@@ -1232,7 +1232,7 @@
      "source": [
       "You can also form empty (zero) matrices of arbitrary shape (including vectors, which Numpy treats as vectors with one row), using the **zeros** command:\n",
       "\n",
-      "    np.zeros((3,3),'d')"
+      "    np.zeros( [3,3], 'd')"
      ]
     },
     {
@@ -1247,7 +1247,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The first argument is a tuple containing the shape of the matrix, and the second is the data type argument, which follows the same conventions as in the array command. Thus, you can make row vectors:"
+      "The first argument is a list containing the shape of the matrix, and the second is the data type argument, which follows the same conventions as in the array command. Thus, you can make row vectors:"
      ]
     },
     {
@@ -1269,7 +1269,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    np.zeros((1,3),'d')"
+      "    np.zeros( [1,3], 'd')"
      ]
     },
     {
@@ -1286,7 +1286,7 @@
      "source": [
       "or column vectors:\n",
       "\n",
-      "    np.zeros((3,1),'d')"
+      "    np.zeros( [3,1], 'd')"
      ]
     },
     {
@@ -1318,8 +1318,18 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "as well as a **ones** command."
+      "as well as a **ones** command.\n",
+      "\n",
+      "    np.ones([3,1])"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "markdown",
