Updating workshop 2 draft again

--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -1605,14 +1605,6 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -2370,7 +2362,10 @@
      "metadata": {},
      "source": [
       "    from numpy import sqrt\n",
-      "    def f(x): return exp(-x)\n",
+      "    \n",
+      "    def f(x): \n",
+      "        return exp(-x)\n",
+      "    \n",
       "    x = np.linspace(0,10)\n",
       "    plot(x,exp(-x))"
      ]
